Add KI and KD service
