# explorer/swagger.json
@@ -179,6 +179,86 @@
         }
       }
     },
+    "/course/kikd/detail/with/competency/{competencyId}/course/{courseId}": {
+      "get": {
+        "description": "Get the KI and KD detail entity by Competency and Course id.",
+        "tags": [
+          "course"
+        ],
+        "summary": "Return KI and KD detail by Competency and Course id",
+        "operationId": "getKIKDDetail",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "ID of the competency",
+            "name": "competencyId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "integer",
+            "description": "ID of the course",
+            "name": "courseId",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/KIKDDetailResp"
+          },
+          "400": {
+            "$ref": "#/responses/badReq"
+          },
+          "404": {
+            "$ref": "#/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/responses/KIKDDetailResp"
+          }
+        }
+      }
+    },
+    "/course/kikd/with/competency/{competencyId}/group/{groupId}": {
+      "get": {
+        "description": "Get the course KI and KD entity by Competency and Group id.",
+        "tags": [
+          "course"
+        ],
+        "summary": "Return course KI and KD by Competency and Group id",
+        "operationId": "getCourseKIKD",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "ID of the competency",
+            "name": "competencyId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "integer",
+            "description": "ID of the group",
+            "name": "groupId",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/courseKIKDResp"
+          },
+          "400": {
+            "$ref": "#/responses/badReq"
+          },
+          "404": {
+            "$ref": "#/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/responses/courseKIKDResp"
+          }
+        }
+      }
+    },
     "/districts": {
       "get": {
         "description": "Get the district entities.",
@@ -691,6 +771,46 @@
       },
       "x-go-package": "github.com/dwhub/kurikulumsmkapi/models"
     },
+    "CourseKIKD": {
+      "description": "CourseKIKD model and json tag",
+      "type": "object",
+      "properties": {
+        "competency_id": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "CompetencyID"
+        },
+        "group": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Group"
+        },
+        "have_children": {
+          "type": "boolean",
+          "x-go-name": "HaveChildren"
+        },
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "order": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Order"
+        },
+        "parent_id": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ParentID"
+        }
+      },
+      "x-go-package": "github.com/dwhub/kurikulumsmkapi/models"
+    },
     "District": {
       "description": "District model and json tag",
       "type": "object",
@@ -827,6 +947,55 @@
       },
       "x-go-package": "github.com/dwhub/kurikulumsmkapi/models"
     },
+    "KD": {
+      "description": "KD model and json tag",
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "order": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Order"
+        }
+      },
+      "x-go-package": "github.com/dwhub/kurikulumsmkapi/models"
+    },
+    "KI": {
+      "description": "KI model and json tag",
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ID"
+        },
+        "kds": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/KD"
+          },
+          "x-go-name": "Details"
+        },
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "order": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Order"
+        }
+      },
+      "x-go-package": "github.com/dwhub/kurikulumsmkapi/models"
+    },
     "Paging": {
       "description": "Paging fields",
       "type": "object",
@@ -957,6 +1126,28 @@
     }
   },
   "responses": {
+    "KIKDDetailResp": {
+      "description": "SwaggKIKDDetailResp HTTP status code and KI and KD detail model in message",
+      "schema": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "description": "HTTP status code",
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Code"
+          },
+          "message": {
+            "description": "KI and KD detail model",
+            "type": "array",
+            "items": {
+              "$ref": "#/definitions/KI"
+            },
+            "x-go-name": "Message"
+          }
+        }
+      }
+    },
     "badReq": {
       "description": "Error Bad Request",
       "schema": {
@@ -1091,6 +1282,28 @@
             "type": "array",
             "items": {
               "$ref": "#/definitions/CourseDuration"
+            },
+            "x-go-name": "Message"
+          }
+        }
+      }
+    },
+    "courseKIKDResp": {
+      "description": "SwaggCourseKIKDResp HTTP status code and course KI and KD model in message",
+      "schema": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "description": "HTTP status code",
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Code"
+          },
+          "message": {
+            "description": "Course KI and KD model",
+            "type": "array",
+            "items": {
+              "$ref": "#/definitions/CourseKIKD"
             },
             "x-go-name": "Message"
           }
